--- a/views/email-templates/password-reset.pug
+++ b/views/email-templates/password-reset.pug
@@ -1,3 +1,10 @@
-p Forgot password
 
-p Password recovery code is #{code}
+extends email-layout
+
+block content
+  h2 Password Reset
+  p Hello. You have requested a password reset. Please click the following button to continue on with resetting your password. Please note this link is only valid for the next hour.
+  +button(code, 'Reset my Password →')
+
+  br
+  p If you didn't request this email, please ignore it.
