--- a/views/email-templates/verify-account.pug
+++ b/views/email-templates/verify-account.pug
@@ -1,6 +1,8 @@
-h2 Verify Account 
-p Hello #{name},
-p Please follow the below link to complete your Registration.
-h6 #{code}
-br
-h5 Neosoft Technologies
+extends email-layout
+
+block content
+  h2 Verify Account
+  p Hello #{name}. Please follow the below link to complete your Registration.
+  h6 #{code}
+  br
+  p Neosoft Technologies
