--- a/views/email-templates/verify-account.pug
+++ b/views/email-templates/verify-account.pug
@@ -2,7 +2,7 @@ extends email-layout
 
 block content
   h2 Verify Account
-  p Hello #{name}. Please follow the below link to complete your Registration.
-  h6 #{code}
+  p Hello #{name}. Please follow the below link/code to complete your Registration.
+  +button(code, 'Verify Me →')
   br
-  p Neosoft Technologies
+  h6 Neosoft Technologies
