Added resend code API

--- a/views/email-templates/password-reset.pug
+++ b/views/email-templates/password-reset.pug
@@ -3,8 +3,8 @@ extends email-layout
 
 block content
   h2 Password Reset
-  p Hello. You have requested a password reset. Please click the following button to continue on with resetting your password. Please note this link is only valid for the next hour.
-  +button(code, 'Reset my Password →')
+  p Hello. You have requested a password reset. Here is the verification code you can use while updating your Password. Please note this code is only valid for the next hour.
+  h5 #{code}
 
   br
   p If you didn't request this email, please ignore it.
