--- a/views/email-templates/verify-account.pug
+++ b/views/email-templates/verify-account.pug
@@ -2,7 +2,8 @@ extends email-layout
 
 block content
   h2 Verify Account
-  p Hello #{name}. Please follow the below link/code to complete your Registration.
-  +button(code, 'Verify Me →')
+  //- p Hello #{name}. Please follow the below link/code to complete your Registration.
+  p Hello  #{name}, Please verify yourself using the code posted below.
+  p Return to your app providing <strong>#{code}</strong> to gain access.
   br
-  h6 Neosoft Technologies
+  h5 Neosoft Technologies 
